update main font

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,14 @@
 @import 'bootstrap/scss/bootstrap.scss';
 
+@font-face {
+  font-family: 'Market';
+  src: url('./asset/font/market/Market.otf') format('truetype');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Market';
+  font-size: 1.2rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
